Hide OpenAI API

--- a/dataset_preprocess/labeling_2.ipynb
+++ b/dataset_preprocess/labeling_2.ipynb
@@ -9,7 +9,7 @@
     "import pandas as pd\n",
     "from openai import OpenAI\n",
     "\n",
-    "api = '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'\n",
+    "api = '##################'\n",
     "data_path = './split/music_bugs_2.csv'\n",
     "data = pd.read_csv(data_path)\n",
     "\n",
